--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,20 +13,20 @@
 		2) servlet specific <init-param> 
 		3) context specific <context-param>
 
-		The value might be either "development" (reloading when templates change) or 
-		"deployment". If no configuration is found, "development" is the default. -->
+    The value might be either "development" (reloading when templates change) or
+    "deployment". If no configuration is found, "development" is the default. -->
 
-	<filter>
-		<filter-name>wicket.artifactory-go</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-		<init-param>
-			<param-name>applicationClassName</param-name>
-			<param-value>com.github.mfriedenhagen.WicketApplication</param-value>
-		</init-param>
-	</filter>
+    <filter>
+        <filter-name>wicket.artifactory-go</filter-name>
+        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+        <init-param>
+            <param-name>applicationClassName</param-name>
+            <param-value>com.github.mfriedenhagen.artifactorygo.WicketApplication</param-value>
+        </init-param>
+    </filter>
 
-	<filter-mapping>
-		<filter-name>wicket.artifactory-go</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+    <filter-mapping>
+        <filter-name>wicket.artifactory-go</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
