--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
         <developerConnection>scm:git:ssh://git@github.com/mfriedenhagen/artifactory-go.git</developerConnection>
         <url>https://github.com/mfriedenhagen/artifactory-go</url>
     </scm>
+    <issueManagement>
+        <system>github</system>
+        <url>${project.scm.url}/issues</url>
+    </issueManagement>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -46,6 +50,8 @@
         <wicket.version>6.5.0</wicket.version>
         <jetty.version>7.6.3.v20120416</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-checkstyle-plugin.suppressionsLocation>${user.dir}/src/conf/checkstyle-suppressions.xml</maven-checkstyle-plugin.suppressionsLocation>
+        <findbugs-maven-plugin.excludeFilterFile>${user.dir}/src/conf/findbugs-exclude.xml</findbugs-maven-plugin.excludeFilterFile>
     </properties>
     <dependencies>
         <!--  WICKET DEPENDENCIES -->
